# fugaku.rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  job.sh
.cargo/: config  config.toml
bed/: Cargo.toml
bed/src/: main.rs
crates/mpi/: Cargo.toml
crates/mpi-async/: Cargo.toml
crates/mpi-async/src/: communicator.rs  lib.rs  mpi.rs  request.rs  universe.rs
crates/mpi-common/: Cargo.toml
crates/mpi-common/src/: communicator.rs  data_type.rs  initialize.rs  lib.rs  op.rs  thread_level.rs  util.rs
crates/mpi-sys/: Cargo.toml  gen.sh
crates/mpi-sys/src/: ffi.rs
crates/mpi/src/: communicator.rs  lib.rs  mpi.rs  request.rs  universe.rs
crates/mpi/src/mpi/: op.rs
example/: hello-mpi.rs  send-recv.rs
examples/: abort.rs  all_reduce.rs  gather.rs  hello-mpi-thread.rs  hello-mpi.rs  one-to-one-async.rs  one-to-one.rs  reduce.rs  scatter.rs  send-recv-replace.rs  send-recv.rs  send_recv.rs  send_recv_replace.rs
fujitsu-mpi-sys/: Cargo.toml  README.md  gen.sh
fujitsu-mpi-sys/src/: ffi.rs  lib.rs
scripts/: linker-aarch64
src/: communicator.rs  lib.rs  request.rs  universe.rs  util.rs
src/mpi/: data_type.rs  data_types.rs  op.rs
