[package]
name = "fugaku"
version = "0.1.0"
edition = "2021"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
description = "Fujitsu MPI library for rust."
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/mpi",
  "crates/mpi-async",
  "crates/mpi-sys",
  "bed",
]

[dependencies]
mpi-sys = { path="crates/mpi-sys" }
mpi-async = { path="crates/mpi-async" }
mpi = { path="crates/mpi" }

[workspace.dependencies]  
anyhow = "1"

[[example]]
name = "hello-mpi"

[[example]]
name = "hello-mpi-thread"

[[example]]
name = "abort"

[[example]]
name = "one-to-one"

[[example]]
name = "one-to-one-async"

[[example]]
name = "send_recv"

[[example]]
name = "send_recv_replace"

[[example]]
name = "scatter"

[[example]]
name = "gather"

[[example]]
name = "reduce"

[[example]]
name = "all_reduce"
