[package]
name = "fugaku"
version = "0.1.0"
edition = "2021"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
description = "Rust lib. collection for Fugaku Supercomputer."
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/mpi-common",
  "crates/mpi-sys",
  "crates/mpi",
  "crates/mpi-async",
  "bed",
]

[dependencies]
mpi-sys = { path="crates/mpi-sys" }
mpi-async = { path="crates/mpi-async" }
mpi = { path="crates/mpi" }
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"

[workspace.dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
log = "0.4.21"

[[example]]
name = "hello-mpi"

[[example]]
name = "hello-mpi-thread"

[[example]]
name = "abort"

[[example]]
name = "one-to-one"

[[example]]
name = "one-to-one-async"

[[example]]
name = "send_recv"

[[example]]
name = "send_recv_replace"

[[example]]
name = "scatter"

[[example]]
name = "gather"

[[example]]
name = "reduce"

[[example]]
name = "all_reduce"
