[package]
name = "mpi-async"
version = "0.1.0"
edition = "2021"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
description = "Fujitsu MPI library for rust."
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
mpi-common = { path = "../mpi-common"}
mpi-sys = { path="../mpi-sys" }
futures = "0.3.28"
